Add IMetadataRepository.removeReferences()
+ Clean-up the affected classes at a few occasions
+ Make LocalMetadataRepository.repositories a LinkedHashSet to ensure a
stable order of repository references, which simplifies manual
inspection of created content.xml files.